syntax = "proto3";

package kobun4.bank.money.v1;

option go_package = "v1pb";

message AddRequest {
    bytes account_handle = 1;
    int64 amount = 2;
}

message AddResponse {
}

message GetBalanceRequest {
    repeated bytes account_handle = 1;
}

message GetBalanceResponse {
    repeated int64 balance = 1;
}

message TransferRequest {
    bytes source_account_handle = 1;
    bytes target_account_handle = 2;
    int64 amount = 3;
}

message TransferResponse {
}

service Money {
    rpc Add(AddRequest) returns (AddResponse) { }
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) { }
    rpc Transfer(TransferRequest) returns (TransferResponse) { }
}
