syntax = "proto3";

package kobun4.executor.scripts.v1;

option go_package = "v1pb";

enum BillingMethod {
    BILL_EXECUTING_ACCOUNT = 0;
    BILL_OWNING_ACCOUNT = 1;
    BILL_NOBODY = 2;
}

message Context {
    string bridge_name = 1;
    string mention = 2;
    map<string, string> extra = 3;
}

message CreateRequest {
    bytes account_handle = 1;
    bytes account_key = 2;
    string name = 3;
    bytes content = 4;
    BillingMethod billing_method = 5;
}

message CreateResponse {
}

message ListRequest {
    bytes account_handle = 1;
}

message ListResponse {
    repeated string name = 1;
}

message DeleteRequest {
    bytes account_handle = 1;
    bytes account_key = 2;
    string name = 3;
}

message DeleteResponse {
}

message ExecuteRequest {
    bytes executing_account_handle = 1;
    bytes executing_account_key = 2;

    bytes script_account_handle = 3;

    string name = 4;
    string rest = 5;
    Context context = 6;
}

message ExecuteResponse {
    message Withdrawal {
        bytes target_account_handle = 1;
        int64 amount = 2;
    }

    bool ok = 1;
    bytes stdout = 2;
    bytes stderr = 3;
    int64 usage_cost = 4;
    repeated Withdrawal withdrawal = 5;
    BillingMethod billing_method = 6;
}

service Scripts {
    rpc Create(CreateRequest) returns (CreateResponse) { }
    rpc List(ListRequest) returns (ListResponse) { }
    rpc Delete(DeleteRequest) returns (DeleteResponse) { }
    rpc Execute(ExecuteRequest) returns (ExecuteResponse) { }
}
